--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.5",
+    "handlebars": "^4.0.4",
     "jquery": "^2.1.4",
-    "handlebars": "^4.0.4"
+    "jquery.cookie": "^1.4.1"
   },
   "devDependencies": {
     "browserify": "^12.0.1",
